# cs3161

./: README.md
assignments/ass01.hsproj/: .uuid  ass01.cabal  minhs.cabal
assignments/ass01.hsproj/MinHS/: Env.hs  Evaluator.hs  Syntax.hs  _Env.hsplay  _Evaluator.hsplay  _Syntax.hsplay
assignments/ass02/MinHs/: minHs_install.sh  run_tests.sh
assignments/ass02/MinHs/MinHs.hsproj/: .uuid  000.txt  MinHs.cabal
assignments/ass02/MinHs/MinHs.hsproj/MinHS/: Pretty.hs  TyInfer.hs  _Subst.hsplay  _Syntax.hsplay  _TyInfer.hsplay
assignments/ass02/MinHs/driver/: Check.hs
lecture-code/week-01.hsproj/: .uuid  Week1.hs  _Week1.hsplay  week01.cabal
lecture-code/week-02.hsproj/: .uuid  Week2.hs  _Week2.hsplay  week02.cabal
lecture-notes/: lecture-01.md  lecture-02.md  lecture-04.md  lecture-05.md  lecture-07.md  lecture-09.md  lecture-11.md  week-08.md
tutorial-code/week-02.hsproj/: .uuid  Lexer.hs  week02.cabal
