name: MinHs
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: UnspecifiedLicense
license-file: LICENSE
maintainer: liamoc@cse.unsw.edu.au
synopsis: An interpreter for MinHS
category: Language
author: Liam O'Connor
x-ghc-framework-version: 8.0.2-8.9-3
x-last-ide-version: HfM1.5.1
Executable MinHs
  main-is: Main.hs
  buildable: True
  build-depends:
      base >=4.5,
      optparse-applicative >=0.10,
      ansi-wl-pprint >=0.6,
      containers >=0.4,
      parsec >=3.1
  default-language: Haskell2010
  other-modules:
      MinHS.Env
      MinHS.TCMonad
      MinHS.Syntax
      MinHS.TyInfer
      MinHS.Pretty
      MinHS.Evaluator
      MinHS.Parse
      MinHS.Subst
